# aibotchat

./: .env.example  .gitignore  AI客服中台MVP技术方案.md  AI客服中台MVP第一周开发详情.md  AI客服中台MVP第二周开发详情.md  README.md  main.py  pyproject.toml  requirements.txt  本次修改内容详解.md  第二周修改内容详解.md
alembic/: env.py
alembic/versions/: 202604010001_init_mvp_tables.py
app/: __init__.py  main.py
app/api/v1/: chat.py  health.py  history.py  messages.py  router.py  sessions.py
app/core/: config.py  exception_handlers.py  guards.py  logger.py  middleware.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  channel.py  message.py  message_event.py  session.py  tenant.py  user.py
app/db/repositories/: event_repo.py  message_repo.py  session_repo.py
app/schemas/: chat.py  common.py  history.py  message.py  session.py
app/services/: message_service.py  session_service.py  token_tracker.py
app/services/conversation/: context_manager.py  orchestrator.py  prompt_builder.py
app/services/llm/: __init__.py  base.py  openai_provider.py
app/tests/: conftest.py
app/tests/api/: test_chat.py  test_health.py  test_history.py  test_messages.py  test_sessions.py
app/tests/services/: test_context_manager.py  test_event_repo.py  test_guards.py  test_message_service.py  test_session_service.py
app/utils/: ids.py
